--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue-template-compiler": "^2.6.14",
     "vue-xlsx": "^0.2.1",
     "vue2-editor": "^2.10.3",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.1",
     "webpack": "^4.46.0",
     "xlsx": "^0.18.5"
