--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/dotenv": "^1.4.1",
