--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "socket.io": "^4.5.1",
     "swiper": "^4.4.1",
     "v-calendar": "^2.4.1",
+    "v-show-slide": "^1.8.3",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
     "vue-awesome-swiper": "^3.1.3",
