--- a/package.json
+++ b/package.json
@@ -49,12 +49,10 @@
     "vue-qrcode-reader": "^3.1.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vue-xlsx": "^0.2.1",
     "vue2-editor": "^2.10.3",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.1",
-    "webpack": "^4.46.0",
-    "xlsx": "^0.18.5"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
