--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue2-editor": "^2.10.3",
+    "vue2-scrollbar": "^0.0.3",
+    "vuebar": "^0.0.20",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.1",
     "webpack": "^4.46.0"
