--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/dotenv": "^1.4.1",
+    "aos": "^3.0.0-beta.6",
     "apexcharts": "^3.35.4",
     "bootstrap-vue": "^2.22.0",
     "caniuse-lite": "^1.0.30001431",
