--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/robots": "^3.0.0",
     "aos": "^3.0.0-beta.6",
     "apexcharts": "^3.35.4",
     "bootstrap-vue": "^2.22.0",
