--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "caniuse-lite": "^1.0.30001431",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.19.3",
+    "cropperjs": "^1.5.13",
     "express": "^4.18.1",
     "http": "0.0.1-security",
     "lottie-web": "^5.9.4",
@@ -46,9 +47,11 @@
     "v-click-outside": "^3.2.0",
     "v-show-slide": "^1.8.3",
     "vue": "^2.6.14",
+    "vue-advanced-cropper": "^1.11.6",
     "vue-apexcharts": "^1.6.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-color": "^2.8.1",
+    "vue-cropper": "^0.5.8",
     "vue-fixed-header": "^3.2.15",
     "vue-lottie": "^0.2.1",
     "vue-moment": "^4.1.0",
